# fastllm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
config/: rules.json
fastllm/: __init__.py  demo.py  hook_engine.py  rule_engine.py  spectral_analysis.py  strategies.py  triggers.py
scripts/: stealth_infection_experiment.py  sweep_all_strategies.py  train_stealth_poison.py
tests/: test_fastllm.py  test_scaling.py  test_spectral_backdoor.py
